Update example notebook for protonet on OmniGlot.

--- a/examples/Prototypical_Omniglot.ipynb
+++ b/examples/Prototypical_Omniglot.ipynb
@@ -6,6 +6,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import sys\n",
+    "sys.path.insert(0, os.path.abspath('../tensorflow_fewshot/'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow_fewshot.models.prototypical_network as ptn\n",
+    "import tensorflow_fewshot.models.utils as models_utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "\n",
@@ -21,8 +42,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,73 +126,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 191,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'tensorflow_fewshot.models.prototypical_network' from '../tensorflow_fewshot/models/prototypical_network.py'>"
-      ]
-     },
-     "execution_count": 191,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "import tensorflow_fewshot.models.prototypical_network as ptn\n",
-    "\n",
-    "import importlib\n",
-    "importlib.reload(ptn)"
+    "## Training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "protonet = ptn.PrototypicalNetwork()"
+    "encoder = models_utils.create_imageNetCNN(input_shape=(28, 28, 1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "protonet = ptn.PrototypicalNetwork(encoder=encoder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Layer conv2d_120 is casting an input tensor from dtype float64 to the layer's dtype of float32, which is new behavior in TensorFlow 2.  The layer has dtype float32 because it's dtype defaults to floatx.\n",
-      "\n",
-      "If you intended to run this layer in float32, you can safely ignore this warning. If in doubt, this warning is likely only an issue if you are porting a TensorFlow 1.X model to TensorFlow 2.\n",
-      "\n",
-      "To change all layers to have dtype float64 by default, call `tf.keras.backend.set_floatx('float64')`. To change just this layer, pass dtype='float64' to the layer constructor. If you are the author of this layer, you can disable autocasting by passing autocast=False to the base Layer constructor.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Layer conv2d_120 is casting an input tensor from dtype float64 to the layer's dtype of float32, which is new behavior in TensorFlow 2.  The layer has dtype float32 because it's dtype defaults to floatx.\n",
-      "\n",
-      "If you intended to run this layer in float32, you can safely ignore this warning. If in doubt, this warning is likely only an issue if you are porting a TensorFlow 1.X model to TensorFlow 2.\n",
-      "\n",
-      "To change all layers to have dtype float64 by default, call `tf.keras.backend.set_floatx('float64')`. To change just this layer, pass dtype='float64' to the layer constructor. If you are the author of this layer, you can disable autocasting by passing autocast=False to the base Layer constructor.\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "TensorShape([5, 64])"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,73 +172,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:Layer conv2d_56 is casting an input tensor from dtype float64 to the layer's dtype of float32, which is new behavior in TensorFlow 2.  The layer has dtype float32 because it's dtype defaults to floatx.\n",
-      "\n",
-      "If you intended to run this layer in float32, you can safely ignore this warning. If in doubt, this warning is likely only an issue if you are porting a TensorFlow 1.X model to TensorFlow 2.\n",
-      "\n",
-      "To change all layers to have dtype float64 by default, call `tf.keras.backend.set_floatx('float64')`. To change just this layer, pass dtype='float64' to the layer constructor. If you are the author of this layer, you can disable autocasting by passing autocast=False to the base Layer constructor.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Layer conv2d_56 is casting an input tensor from dtype float64 to the layer's dtype of float32, which is new behavior in TensorFlow 2.  The layer has dtype float32 because it's dtype defaults to floatx.\n",
-      "\n",
-      "If you intended to run this layer in float32, you can safely ignore this warning. If in doubt, this warning is likely only an issue if you are porting a TensorFlow 1.X model to TensorFlow 2.\n",
-      "\n",
-      "To change all layers to have dtype float64 by default, call `tf.keras.backend.set_floatx('float64')`. To change just this layer, pass dtype='float64' to the layer constructor. If you are the author of this layer, you can disable autocasting by passing autocast=False to the base Layer constructor.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Episode 0; lr: 1.00e-03, training loss: 1136.0100, train accuracy: 0.65\n"
+      "Episode 0; lr: 1.00e-03, training loss: 1222.8706, train accuracy: 0.53\n"
      ]
     }
    ],
    "source": [
-    "protonet.meta_train(train_X, train_Y, n_episode=2)"
+    "acc, loss, test_acc = protonet.meta_train(train_X, train_Y, n_episode=200)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test classes are: [1570 1241 1284 1326  971]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_classes = np.random.choice(np.unique(test_Y), size=5, replace=False)\n",
+    "print(\"Test classes are:\", test_classes)\n",
+    "\n",
+    "fit_indices = np.zeros((25,), dtype=np.int32)\n",
+    "test_indices = np.zeros((25,), dtype=np.int32)\n",
+    "for i in range(5):\n",
+    "    class_indices = np.random.choice(\n",
+    "        np.argwhere(test_Y == test_classes[i]).flatten(),\n",
+    "        size=10,\n",
+    "        replace=False\n",
+    "    )\n",
+    "    fit_indices[i*5:(i+1)*5] = class_indices[:5]\n",
+    "    test_indices[i*5:(i+1)*5] = class_indices[5:]\n",
+    "\n",
+    "np.random.shuffle(fit_indices)\n",
+    "np.random.shuffle(test_indices)\n",
+    "\n",
+    "fit_data = test_X[fit_indices,:,:,:]\n",
+    "fit_labels = test_Y[fit_indices]\n",
+    "\n",
+    "test_data = test_X[test_indices,:,:,:]\n",
+    "test_labels = test_Y[test_indices]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "protonet.train(test_X[:200,:,:,:].astype(np.float32), test_Y[:200])"
+    "protonet.fit(fit_data.astype(np.float32), fit_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_preds = protonet.predict(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([60, 60, 60, 60, 60])"
+       "array([1284,  971, 1326, 1326, 1326, 1570, 1570,  971, 1284, 1241, 1241,\n",
+       "       1284, 1570, 1570, 1241, 1326,  971, 1326,  971, 1570,  971, 1284,\n",
+       "       1570, 1570, 1241], dtype=int32)"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "protonet.predict(test_X[200:205,:,:,:])"
+    "test_preds"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1284,  971, 1326, 1326, 1326, 1570, 1570,  971, 1284, 1241, 1241,\n",
+       "       1284, 1241, 1284, 1241, 1326,  971, 1326,  971, 1570,  971, 1284,\n",
+       "       1570, 1570, 1241])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy is: 0.92\n"
+     ]
+    }
+   ],
+   "source": [
+    "acc = np.mean(test_preds == test_labels)\n",
+    "print(\"Test accuracy is:\", acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
