Minor changes on example notebooks.

--- a/examples/MAML_on_Omniglot.ipynb
+++ b/examples/MAML_on_Omniglot.ipynb
@@ -394,7 +394,7 @@
    },
    "outputs": [],
    "source": [
-    "encoder = utils.create_imageNetCNN(input_shape=(28, 28, 1), use_dense_head=True, output_dim=5)"
+    "encoder = utils.create_standardized_CNN(input_shape=(28, 28, 1), use_dense_head=True, output_dim=5)"
    ]
   },
   {
