--- a/examples/Prototypical_Networks_on_Omniglot.ipynb
+++ b/examples/Prototypical_Networks_on_Omniglot.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, we demonstrate the use the Prototypical Network model from `tensorflow-fewshot`. We use the Omniglot dataset as an example, and we aim to replicate the results claimed in the paper that introduced Prototypical Networks: *Prototpical Networks for Few-shot Learning* (Snell et al., 2017)."
+    "In this notebook, we demonstrate the use of Prototypical Network model from `tensorflow-fewshot`. We use the Omniglot dataset as an example, and we aim to replicate the results claimed in the paper that introduced Prototypical Networks: *Prototpical Networks for Few-shot Learning* (Snell et al., 2017)."
    ]
   },
   {
@@ -248,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training"
+    "## Meta-training"
    ]
   },
   {
@@ -264,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "encoder = utils.create_imageNetCNN(input_shape=(28, 28, 1))"
+    "encoder = utils.create_standardized_CNN(input_shape=(28, 28, 1))"
    ]
   },
   {
@@ -440,28 +440,6 @@
    "outputs": [],
    "source": [
     "test_preds = protonet.predict(test_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1496, 1496, 1496, 1496, 1496, 1268, 1268, 1268, 1268, 1268, 1379,\n",
-       "       1379, 1379, 1379, 1379, 1437, 1437, 1437, 1437, 1437, 1266, 1266,\n",
-       "       1266, 1266, 1266])"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_labels"
    ]
   },
   {
