Add some more doc.

--- a/examples/Prototypical_Networks_on_Omniglot.ipynb
+++ b/examples/Prototypical_Networks_on_Omniglot.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "from tensorflow_fewshot.models import PrototypicalNetwork\n",
     "import tensorflow_fewshot.models.utils as utils\n",
-    "from tensorflow_fewshot.datasets import MetaDatasetFromArray"
+    "from tensorflow_fewshot.datasets import MetaDatasetFromArray, "
    ]
   },
   {
